force-app/main/default/objects/BloqueFuncionalUATs__c/BloqueFuncionalUATs__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene el desglose de los bloques de un proyecto con el porcentaje de UATs.</description>
    <label>Bloque Funcional UATs</label>
    <nameField>
        <label>Nombre de Bloque Funcional UATs</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bloques Funcionales UATs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>