force-app/main/default/objects/BloqueFuncionalUATs__c/fields/Avance_de_este_Bloque__c.field-meta.xml
<CustomField>
    <fullName>Avance_de_este_Bloque__c</fullName>
    <formula>SumaAvances__c / NumeroUATsDeEsteBloque__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Avance de este Bloque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>