force-app/main/default/objects/BloqueFuncionalUATs__c/fields/NumeroUATsDeEsteBloque__c.field-meta.xml
<CustomField>
    <fullName>NumeroUATsDeEsteBloque__c</fullName>
    <description>Número de UATs que contiene este boque</description>
    <label>Número UATs de este bloque</label>
    <summaryForeignKey>UAT__c.BloqueFuncionalUATs__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>