force-app/main/default/objects/BloqueFuncionalUATs__c/fields/PesoBloqueFuncional__c.field-meta.xml
<CustomField>
    <fullName>PesoBloqueFuncional__c</fullName>
    <description>Porcentaje de peso de este bloque de UAT respecto a la suma de todos los bloques</description>
    <label>Peso Bloque Funcional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>