force-app/main/default/objects/BloqueFuncionalUATs__c/fields/PesoUATIndividual__c.field-meta.xml
<CustomField>
    <fullName>PesoUATIndividual__c</fullName>
    <formula>PesoBloqueFuncional__c / NumeroUATsDeEsteBloque__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peso UAT Individual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>