force-app/main/default/objects/BloqueFuncionalUATs__c/fields/SumaAvances__c.field-meta.xml
<CustomField>
    <fullName>SumaAvances__c</fullName>
    <label>Suma de avances</label>
    <summarizedField>UAT__c.Avance__c</summarizedField>
    <summaryForeignKey>UAT__c.BloqueFuncionalUATs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>